samples/_failures_safe/1761511405_ef794a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_221c3f66.c:145:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  145 | int tokenize
      | ^~~
